--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,11 @@
   </head>
 
   <body>
+
+
+    
+
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-default">
         <div class="container">
           <a class="navbar-brand" href="#">Default Color</a>
@@ -55,19 +60,21 @@
             <ul class="navbar-nav ml-lg-auto">
               <li class="nav-item">
                 <a class="nav-link nav-link-icon" href="#">
-                  <i class="ni ni-favourite-28"></i>
+                  <i class="fas fa-heart"></i>
+
+
                   <span class="nav-link-inner--text d-lg-none">Discover</span>
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link nav-link-icon" href="#">
-                  <i class="ni ni-notification-70"></i>
+                  <i class="fas fa-user-circle"></i>
                   <span class="nav-link-inner--text d-lg-none">Profile</span>
                 </a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="ni ni-settings-gear-65"></i>
+                  <i class="fas fa-cog"></i>
                   <span class="nav-link-inner--text d-lg-none">Settings</span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
