--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,6 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field" style="border-radius: 30px">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
- 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
 
 
 
@@ -45,10 +22,8 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-at"></i></span>
                       </div>
-                        <input class="field form-control">
-                          <% f.label :email %><br />
-                          <% f.email_field :email, autofocus: true, autocomplete: "email" %>
-                        
+                          <% f.label :email %>
+                          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
                     </div>
                   </div>
                   <div class="form-group">
@@ -56,7 +31,10 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="fas fa-unlock-alt"></i></span>
                       </div>
-                      <input class="form-control" placeholder="Password" type="password">
+                        <div class="field">
+                          <% f.label :password %>
+                          <%= f.password_field :password, autocomplete: "new-password" %>
+                        </div>
                     </div>
                     <div class="text-primary font-italic"><small>(6 characters minimum)</small></div>
                   </div>
@@ -64,7 +42,10 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fas fa-unlock-alt"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Password confirmation" type="password">
+                      <div class="field">
+                        <% f.label :password_confirmation %><br />
+                        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+                      </div>
                   </div>
 
                   <div class="row my-4">
@@ -76,7 +57,9 @@
                     </div>
                   </div>
                   <div class="text-center">
-                    <button type="button" class="btn btn-secondary mt-4">Create account</button>
+                      <div class="actions">
+                        <%= f.submit "Sign up" %>
+                      </div>
                   </div>
                 </form>
               </div>
@@ -84,7 +67,4 @@
           </div>
         </div>
       </div>
-    </section>
   <% end %>
-
-<%= render "devise/shared/links" %>
