--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <!-- Favicon -->
   <link href="assets/images/brand/favicon.png" rel="icon" type="image/png">
   <!-- Fonts -->
@@ -16,78 +16,86 @@
   <link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-grid.css?v=1.1.0" rel="stylesheet">
   <link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-reboot.css?v=1.1.0" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    
-    <title>SatisFaction</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <title>SatisFaction</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-  <body>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
+<body>
+	<nav class="navbar navbar-expand-lg navbar-dark bg-default">
+		<div class="btn-group">
+			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Satisfact°
+			</button>
+			<div class="dropdown-menu">
+				<a class="dropdown-item" href="#">Qui sommes nous ?</a>
+				<a class="dropdown-item" href="#">Nos Ambition</a>
+				<a class="dropdown-item" href="#">Nous contacter</a>
+			</div>
+		</div>
 
-    
+		<div class="container">
+		  <a class="navbar-brand" href="#"></a>
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
+		<div class="collapse navbar-collapse" id="navbar-default">
+			<div class="navbar-collapse-header">
+			  <div class="row">
+				<div class="col-6 collapse-brand">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-default">
-        <div class="container">
-          <a class="navbar-brand" href="#">Default Color</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbar-default">
-            <div class="navbar-collapse-header">
-              <div class="row">
-                <div class="col-6 collapse-brand">
-                  <a href="./index.html">
-                    <img alt="image" src="./assets/img/brand/blue.png">
-                  </a>
-                </div>
-                <div class="col-6 collapse-close">
-                  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-                    <span></span>
-                    <span></span>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <ul class="navbar-nav ml-lg-auto">
-              <li class="nav-item">
-                <a class="nav-link nav-link-icon" href="#">
-                  <i class="fas fa-heart"></i>
+				</div>
+				
+				<div class="col-6 collapse-close">
+				  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
 
-
-                  <span class="nav-link-inner--text d-lg-none">Discover</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link nav-link-icon" href="#">
-                  <i class="fas fa-user-circle"></i>
-                  <span class="nav-link-inner--text d-lg-none">Profile</span>
-                </a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <i class="fas fa-cog"></i>
-                  <span class="nav-link-inner--text d-lg-none">Settings</span>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <%= yield %>
-  </body>
+				  </button>
+			  </div>
+		  </div>
+	  </div>
+	  <ul class="navbar-nav ml-lg-auto">
+					<li class="nav-item dropdown">
+						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    <i class="fas fa-user-circle"></i>
+							<span class="nav-link-inner--text d-lg-none">Profile</span>
+					    </a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+							<a class="dropdown-item" href="#">mon profile</a>
+							<a class="dropdown-item" href="#">sign up</a>
+							<a class="dropdown-item" href="#">log in</a>
+							<a class="dropdown-item" href="#">disconect</a>
+						</div>
+				  	</li>
+	  
+					<li class="nav-item dropdown">
+						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="fas fa-cog"></i>
+							<span class="nav-link-inner--text d-lg-none">Settings</span>
+						</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+							<a class="dropdown-item" href="#">????</a>
+							<a class="dropdown-item" href="#">????</a>
+						<div class="dropdown-divider"></div>
+						<p>Dark / Light</p>
+						<label class="custom-toggle">
+							<input type="checkbox">
+							<span class="custom-toggle-slider rounded-circle"></span>
+						</label>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+<%= yield %>
+</body>
 </html>
