lins link to enlever

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,10 +69,11 @@
 							<span class="nav-link-inner--text d-lg-none">Profile</span>
 					    </a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-							<%= link_to "Mon profile", root_path, class: "dropdown-item" %>
-							<%= link_to "Log in", new_user_session_path, class: "dropdown-item" %>
-							<%= link_to "Sign up", new_user_registration_path, class: "dropdown-item" %>
-							<%= link_to "disconect", root_path, class: "dropdown-item" %>
+							
+							<a class="dropdown-item" href="#">mon profile</a>
+							<a class="dropdown-item" href="#">sign up</a>
+							<a class="dropdown-item" href="#">log in</a>
+							<a class="dropdown-item" href="#">disconect</a>
 						</div>
 				  	</li>
 	  
