--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,10 +69,10 @@
 							<span class="nav-link-inner--text d-lg-none">Profile</span>
 					    </a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-							
+
 							<a class="dropdown-item" href="#">mon profile</a>
 							<a class="dropdown-item" href="#">sign up</a>
-							<a class="dropdown-item" href="#">log in</a>
+							<a class="dropdown-item" href="sign_in">log in</a>
 							<a class="dropdown-item" href="#">disconect</a>
 						</div>
 				  	</li>
