add username to sign up

--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,5 +1,5 @@
 
-Welcome to example.com, <%= @user.email %>
+Welcome to <%= @user.username %> example.com, <%= @user.email %>
 ===============================================
  
 You have successfully signed up to example.com,
