--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,6 +11,14 @@
                 </div>
                 <form>
                   <div class="form-group">
+                    <div class="input-group input-group-alternative">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-user-tag"></i></span>
+                      </div>
+                          <% f.label :username %>
+                          <%= f.text_field :username, autofocus: true, autocomplete: "username", :class=> "field form-control", :placeholder=> "Username" %>                                             
+                    </div>
+                    <div class="text-primary font-italic"><small>(Between 3 and 16 characters)</small></div>
                   </div>
                   <div class="form-group">
                     <div class="input-group input-group-alternative mb-3">
