--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,73 +30,132 @@
 </head>
 
 <body>
+
+	<nav class="navbar navbar-expand-lg navbar-dark bg-default">
+        
+          	<div id="narvbar_left">
+	          	<a class="navbar-brand" href="#">Satisfact°</a>
+	          	<a class="navbar-brand" href="#">Qui sommes nous ?</a>
+				<a class="navbar-brand" href="#">Nos services</a>
+				<a class="navbar-brand" href="#">Nous contacter</a>
+            </div>
+          <div class="collapse navbar-collapse" id="navbar-default">
+            <div class="navbar-collapse-header">
+              <div class="row">
+                <div class="col-6 collapse-brand">
+                  <a href="./index.html">
+                    <img alt="image" src="./assets/img/brand/blue.png">
+                  </a>
+                </div>
+                <div class="col-6 collapse-close">
+                  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+                    <span></span>
+                    <span></span>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <ul class="navbar-nav ml-lg-auto">
+              
+                <li class="nav-item dropdown">
+						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<i class="fas fa-user-circle"></i>
+								<span class="nav-link-inner--text d-lg-none">Profile</span>
+						</a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+							<a class="dropdown-item" href="#">mon profile</a>
+							<a class="dropdown-item" href="#">sign up</a>
+							<a class="dropdown-item" href="#">log in</a>
+							<a class="dropdown-item" href="#">disconect</a>
+						</div>
+				</li>
+				
+				<li class="nav-item dropdown">
+					<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="fas fa-cog"></i>
+							<span class="nav-link-inner--text d-lg-none">Settings</span>
+					</a>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+						<a class="dropdown-item" href="#">????</a>
+						<a class="dropdown-item" href="#">????</a>
+						<div class="dropdown-divider"></div>
+							<p>Dark / Light</p>
+							<label class="custom-toggle">
+								<input type="checkbox">
+								<span class="custom-toggle-slider rounded-circle"></span>
+							</label>
+						</div>
+					</li>    	
+
+            </ul>
+          </div>
+        
+      </nav>
+
+		<!--
 	<nav class="navbar navbar-expand-lg navbar-dark bg-default">
 		<div class="btn-group">
 			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				Satisfact°
+			Satisfact°
 			</button>
-			<div class="dropdown-menu">
-				<a class="dropdown-item" href="#">Qui sommes nous ?</a>
-				<a class="dropdown-item" href="#">Nos Ambition</a>
-				<a class="dropdown-item" href="#">Nous contacter</a>
-			</div>
+		<div class="dropdown-menu">
+
+		</div>
 		</div>
 
 		<div class="container">
-		  <a class="navbar-brand" href="#"></a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
+			<a class="navbar-brand" href="#"></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-		<div class="collapse navbar-collapse" id="navbar-default">
-			<div class="navbar-collapse-header">
-			  <div class="row">
-				<div class="col-6 collapse-brand">
+			<div class="collapse navbar-collapse" id="navbar-default">
+				<div class="navbar-collapse-header">
+					<div class="row">
+						<div class="col-6 collapse-brand">
 
+						</div>
+
+						<div class="col-6 collapse-close">
+							<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+							</button>
+						</div>
+					</div>
 				</div>
-				
-				<div class="col-6 collapse-close">
-				  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-
-				  </button>
-			  </div>
-		  </div>
-	  </div>
-	  <ul class="navbar-nav ml-lg-auto">
+				<ul class="navbar-nav ml-lg-auto">
 					<li class="nav-item dropdown">
 						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    <i class="fas fa-user-circle"></i>
-							<span class="nav-link-inner--text d-lg-none">Profile</span>
-					    </a>
+							<i class="fas fa-user-circle"></i>
+								<span class="nav-link-inner--text d-lg-none">Profile</span>
+						</a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-
 							<a class="dropdown-item" href="#">mon profile</a>
 							<a class="dropdown-item" href="#">sign up</a>
-							<a class="dropdown-item" href="sign_in">log in</a>
+							<a class="dropdown-item" href="#">log in</a>
 							<a class="dropdown-item" href="#">disconect</a>
 						</div>
-				  	</li>
-	  
+					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						<i class="fas fa-cog"></i>
+							<i class="fas fa-cog"></i>
 							<span class="nav-link-inner--text d-lg-none">Settings</span>
 						</a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
 							<a class="dropdown-item" href="#">????</a>
 							<a class="dropdown-item" href="#">????</a>
-						<div class="dropdown-divider"></div>
-						<p>Dark / Light</p>
-						<label class="custom-toggle">
-							<input type="checkbox">
-							<span class="custom-toggle-slider rounded-circle"></span>
-						</label>
+							<div class="dropdown-divider"></div>
+								<p>Dark / Light</p>
+								<label class="custom-toggle">
+									<input type="checkbox">
+									<span class="custom-toggle-slider rounded-circle"></span>
+								</label>
 						</div>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
+-->
 <%= yield %>
 </body>
 </html>
