ajout des 3 vue about_us, our_services et contact_us

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,9 @@
         
           	<div id="narvbar_left">
 	          	<a class="navbar-brand" href="#">Satisfact°</a>
-	          	<a class="navbar-brand" href="#">Qui sommes nous ?</a>
-				<a class="navbar-brand" href="#">Nos services</a>
-				<a class="navbar-brand" href="#">Nous contacter</a>
+	          	<a class="navbar-brand" href="#">About Us</a>
+				<a class="navbar-brand" href="#">Our services</a>
+				<a class="navbar-brand" href="#">Contact Us</a>
             </div>
           <div class="collapse navbar-collapse" id="navbar-default">
             <div class="navbar-collapse-header">
