--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20327,3 +20327,8 @@ html:not([dir='rtl']) .noUi-horizontal .noUi-handle
     display:flex;
     justify-content: left;
 }
+.aboutUs
+{
+    width: 100%;
+    margin: 0 20px 0 20px;
+}
