our_services views

--- a/app/views/static/index_our_services.html.erb
+++ b/app/views/static/index_our_services.html.erb
@@ -1,2 +1,5 @@
-<h1>Static#index_our_services</h1>
-<p>Find me in app/views/static/index_our_services.html.erb</p>
+<div class="container">
+	<div>
+		<h1>J'ai pas d'inspi sorry</h1>
+	</div>
+</div>
