--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,161 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Favicon -->
-  <link href="assets/images/brand/favicon.png" rel="icon" type="image/png">
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
-  <!-- Icons -->
-  <link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
-  <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/b5db9ccac9.js" crossorigin="anonymous"></script>
-  <!-- Application CSS -->
-  <link type="text/css" href="assets/stylesheets/application.css?v=1.1.0" rel="stylesheet">
-  <!-- Bootstrap -->
-  <link type="text/css" href="assets/stylesheets/bootstrap/bootstrap.css?v=1.1.0" rel="stylesheet">
-  <link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-grid.css?v=1.1.0" rel="stylesheet">
-  <link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-reboot.css?v=1.1.0" rel="stylesheet">
+	<!-- Favicon -->
+	<link href="assets/images/brand/favicon.png" rel="icon" type="image/png">
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+	<!-- Icons -->
+	<link href="assets/vendor/nucleo/css/nucleo.css" rel="stylesheet">
+	<link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/b5db9ccac9.js" crossorigin="anonymous"></script>
+	<!-- Application CSS -->
+	<link type="text/css" href="assets/stylesheets/application.css?v=1.1.0" rel="stylesheet">
+	<!-- Bootstrap -->
+	<link type="text/css" href="assets/stylesheets/bootstrap/bootstrap.css?v=1.1.0" rel="stylesheet">
+	<link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-grid.css?v=1.1.0" rel="stylesheet">
+	<link type="text/css" href="assets/stylesheets/bootstrap/bootstrap-reboot.css?v=1.1.0" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-  <title>SatisFaction</title>
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
+	<title>SatisFaction</title>
+	<%= csrf_meta_tags %>
+	<%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body>
 
 	<nav class="navbar navbar-expand-lg navbar-dark bg-default">
-        
-          	<div id="narvbar_left">
-	          	<a class="navbar-brand" href="#">Satisfact°</a>
-	          	<a class="navbar-brand" href="#">About Us</a>
-				<a class="navbar-brand" href="#">Our services</a>
-				<a class="navbar-brand" href="#">Contact Us</a>
-            </div>
-          <div class="collapse navbar-collapse" id="navbar-default">
-            <div class="navbar-collapse-header">
-              <div class="row">
-                <div class="col-6 collapse-brand">
-                  <a href="./index.html">
-                    <img alt="image" src="./assets/img/brand/blue.png">
-                  </a>
-                </div>
-                <div class="col-6 collapse-close">
-                  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-                    <span></span>
-                    <span></span>
-                  </button>
-                </div>
-              </div>
-            </div>
-            <ul class="navbar-nav ml-lg-auto">
-              
-                <li class="nav-item dropdown">
-						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<i class="fas fa-user-circle"></i>
-								<span class="nav-link-inner--text d-lg-none">Profile</span>
+
+		<div id="narvbar_left">
+			<a class="navbar-brand" href="/">Satisfact°</a>
+
+			<a class="navbar-brand" href="/static/index_about_us">About Us</a>
+			<a class="navbar-brand" href="/static/index_our_services">Our services</a>
+			<a class="navbar-brand" href="/static/index_contact_us">Contact Us</a>
+		</div>
+		<div class="collapse navbar-collapse" id="navbar-default">
+			<div class="navbar-collapse-header">
+				<div class="row">
+					<div class="col-6 collapse-brand">
+						<a href="./index.html">
+							<img alt="image" src="./assets/img/brand/blue.png">
 						</a>
-						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-							<a class="dropdown-item" href="#">mon profile</a>
-							<a class="dropdown-item" href="#">sign up</a>
-							<a class="dropdown-item" href="#">log in</a>
-							<a class="dropdown-item" href="#">disconect</a>
-						</div>
+					</div>
+					<div class="col-6 collapse-close">
+						<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
+							<span></span>
+							<span></span>
+						</button>
+					</div>
+				</div>
+			</div>
+			<ul class="navbar-nav ml-lg-auto">
+
+				<li class="nav-item dropdown">
+					<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<i class="fas fa-user-circle"></i>
+						<span class="nav-link-inner--text d-lg-none">Profile</span>
+					</a>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
+						<a class="dropdown-item" href="#">mon profile</a>
+						<a class="dropdown-item" href="#">sign up</a>
+						<a class="dropdown-item" href="#">log in</a>
+						<a class="dropdown-item" href="#">disconect</a>
+					</div>
 				</li>
 				
 				<li class="nav-item dropdown">
 					<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						<i class="fas fa-cog"></i>
-							<span class="nav-link-inner--text d-lg-none">Settings</span>
+						<span class="nav-link-inner--text d-lg-none">Settings</span>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
 						<a class="dropdown-item" href="#">????</a>
 						<a class="dropdown-item" href="#">????</a>
 						<div class="dropdown-divider"></div>
-							<p>Dark / Light</p>
-							<label class="custom-toggle">
-								<input type="checkbox">
-								<span class="custom-toggle-slider rounded-circle"></span>
-							</label>
-						</div>
-					</li>    	
-
-            </ul>
-          </div>
-        
-      </nav>
-
-		<!--
-	<nav class="navbar navbar-expand-lg navbar-dark bg-default">
-		<div class="btn-group">
-			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			Satisfact°
-			</button>
-		<div class="dropdown-menu">
-
-		</div>
-		</div>
-
-		<div class="container">
-			<a class="navbar-brand" href="#"></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-			<div class="collapse navbar-collapse" id="navbar-default">
-				<div class="navbar-collapse-header">
-					<div class="row">
-						<div class="col-6 collapse-brand">
-
-						</div>
-
-						<div class="col-6 collapse-close">
-							<button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar-default" aria-controls="navbar-default" aria-expanded="false" aria-label="Toggle navigation">
-							</button>
-						</div>
+						<p>Dark / Light</p>
+						<label class="custom-toggle">
+							<input type="checkbox">
+							<span class="custom-toggle-slider rounded-circle"></span>
+						</label>
 					</div>
-				</div>
-				<ul class="navbar-nav ml-lg-auto">
-					<li class="nav-item dropdown">
-						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<i class="fas fa-user-circle"></i>
-								<span class="nav-link-inner--text d-lg-none">Profile</span>
-						</a>
-						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-							<a class="dropdown-item" href="#">mon profile</a>
-							<a class="dropdown-item" href="#">sign up</a>
-							<a class="dropdown-item" href="#">log in</a>
-							<a class="dropdown-item" href="#">disconect</a>
-						</div>
-					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link nav-link-icon" href="#" id="navbar-default_dropdown_1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							<i class="fas fa-cog"></i>
-							<span class="nav-link-inner--text d-lg-none">Settings</span>
-						</a>
-						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-default_dropdown_1">
-							<a class="dropdown-item" href="#">????</a>
-							<a class="dropdown-item" href="#">????</a>
-							<div class="dropdown-divider"></div>
-								<p>Dark / Light</p>
-								<label class="custom-toggle">
-									<input type="checkbox">
-									<span class="custom-toggle-slider rounded-circle"></span>
-								</label>
-						</div>
-					</li>
-				</ul>
-			</div>
+				</li>    	
+
+			</ul>
 		</div>
 	</nav>
--->
-<%= yield %>
+	<%= yield %>
 </body>
 </html>
