--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,6 +88,7 @@
 									</div>
 							</li> 
 						</ul>
+					</div>
 				</div>
 </nav>
 
@@ -102,7 +103,7 @@
 			</div>
 			<div class="col-md-6">
 				<a class="navbar-brand" href="/static/index_about_us">About Us</a>
-				
+
 				<a class="navbar-brand" href="/static/index_our_services">Our services</a>
 				<a class="navbar-brand" href="/static/index_contact_us">Contact Us</a>
 				<ul class="nav nav-footer justify-content-end">
