--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20322,6 +20322,11 @@ html:not([dir='rtl']) .noUi-horizontal .noUi-handle
     right: 10px;
     left: auto;
 }
+#navbar_right
+{
+    display:flex;
+    justify-content: right;
+}
 #narvbar_left 
 {
     display:flex;
