--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,11 +2,23 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
 
-<div class="container pt-lg-md">
-        <div class="row justify-content-center">
-          <div class="col-lg-5">
+<section class="section section-shaped section-lg">
+      <div class="shape shape-style-1 bg-gradient-default">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    <div class="container pt-lg-md">
+        <div class="row justify-content-center"> 
+          <!--  style="background-color: #191f4d" -->
+          <div class="col-lg-5" >
             <div class="card bg-secondary shadow border-0">
-              <div class="card-body px-lg-5 py-lg-5" style="background-color: #8898aa; border-radius: 15px;">
+              <div class="card-body px-lg-5 py-lg-5" style="background-color: #8898aa">
                 <div class="text-center text-muted mb-4">
                   <h2>Edit your profile !</h2>
                 </div>
@@ -59,7 +71,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-5">
             <div class="card bg-secondary shadow border-0">
-              <div class="card-body px-lg-5 py-lg-5" style="background-color: #8898aa; border-radius: 15px;">
+              <div class="card-body px-lg-5 py-lg-5" style="background-color: #8898aa">
                 <div class="text-center text-muted mb-4">
                   <h2>Unhappy?</h2>
                 </div>
@@ -75,5 +87,8 @@
             </div>            
           </div>
         </div>
-      </div>
+      </div>      
+</section>
 <% end %>
+
+
