--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,16 +1,27 @@
- <h1> Toutes les surveys </h1>
+<p id="notice"><%= notice %></p>
 
-<ul id="survey-list">
-  <% @surveys.each do |survey| %>
-    <li>"<%= survey.title %>" by <b> User numéro : <%= survey.user_id %></b></li>
-  <% end %>
-</ul>
+<h1>Surveys</h1>
 
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-<%= link_to "Create a survey", new_survey_path, :class=>"btn btn-success mt-4"%>
+  <tbody>
+    <% @surveys.each do |survey| %>
+      <tr>
+        <td><%= survey.title %></td>
+        <td><%= link_to 'Show', survey %></td>
+        <td><%= link_to 'Edit', edit_survey_path(survey) %></td>
+        <td><%= link_to 'Destroy', survey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
+<br>
 
-
-<h1> Mes surveys </h1>
-
-<%= @user.surveys %>
+<%= link_to 'New Survey', new_survey_path %>
