--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,19 +1,6 @@
-<%= content_tag :div,
-id: 'survey-form',
-data: { 
-    survey: survey.to_json(except: [:created_at, :updated_at]),
-    question_attributes: survey.question.to_json(except: [:survey_id, :created_at, :updated_at]),
-} do %>
+<h1>Editing Survey</h1>
 
-<label>Survey Name</label>
-<input type="text" v-model="survey.title"/>
+<%= render 'form', survey: @survey %>
 
-<h4>Questions</h4>
-
-<div v-for="(questions, index) in survey.question_attributes">
-
-</div>
-
-<button v-on:click="addQuestion">Add Question</button>
-
-<% end %>
+<%= link_to 'Show', @survey %> |
+<%= link_to 'Back', surveys_path %>
