--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -8,6 +8,7 @@
 
   <div class="form-inputs"></div>
     <%= f.input :title %>
+    <%= f.hidden_field :user_id, value: @user.id %>
   </div>
 
   <table class="table">
