--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -13,10 +13,8 @@
 
   <table class="table">
     <thead>
-      <tr>
         <th></th>
         <th>Question Content</th>
-      </tr>
     </thead>
     <tbody class="questions">
       <%= f.simple_fields_for :questions do |builder| %>
@@ -27,6 +25,6 @@
 
   <div class="actions">
     <%= f.button :submit %>
-    <%= link_to_add_association 'Add Question', f, :questions, class: 'btn btn-primary', data: { association_insertion_node: '.questions', association_insertion_method: :append } %>
+    <%= link_to_add_association 'Add Question', f, :questions, class: 'btn btn-success', data: { association_insertion_node: '.questions', association_insertion_method: :append } %>
   </div>
 <% end %>
