--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -1,4 +1,4 @@
 <tr class="nested-fields">
-    <td><%= link_to_remove_association "remove question", f, class: 'btn btn-primary btn-xs' %> </td>
+    <td><%= link_to_remove_association "remove", f, class: 'btn btn-warning btn-sm' %> </td>
     <td><%= f.input :content, label: false %></td>
 </tr>
