--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -14,8 +14,8 @@
     <% @surveys.each do |survey| %>
       <tr>
         <td><%= survey.title %></td>
-        <td><%= link_to 'Show', survey %></td>
-        <td><%= link_to 'Edit', edit_survey_path(survey) %></td>
+        <td><%= link_to 'Show', survey %> | </td>
+        <td><%= link_to 'Edit', edit_survey_path(survey) %> | </td>
         <td><%= link_to 'Destroy', survey, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
