--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6570,7 +6570,7 @@ a.badge:focus
 
 .bodybg
 {
-    background-color: rgb(35, 41, 89);
+    background-color: rgb(242, 242, 242);
 }
 
 .jumbotron
@@ -6581,7 +6581,7 @@ a.badge:focus
     border-radius: .3rem;
     background-color: #169e1fa4;
     height: 500px;
-    background-image: url("https://miro.medium.com/max/10636/1*KhvhVYWnCIG_8Rho8D2XTg@2x.jpeg");
+    background-image: url("https://images.pexels.com/photos/590045/pexels-photo-590045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
 }
 
 @media (min-width: 576px)
