--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -1,6 +1,6 @@
 <div>
     <div class="jumbotron text-center">
-        <h2 class="text-white titre1">Optimisez la satisfaction de vos clients en quelques clics</h2>
+        <h2 class="text-primary titre1">Optimisez la satisfaction de vos clients en quelques clics</h2>
         <button type="button" class="btn btn-primary">Nos services</button>
   </div>
    </div>
