button to our services fonctionel

--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -1,7 +1,8 @@
 <div>
     <div class="jumbotron text-center">
         <h2 class="text-primary titre1">Optimisez la satisfaction de vos clients en quelques clics</h2>
-        <button type="button" class="btn btn-primary">Nos services</button>
+        <a style="padding: auto;" class="btn btn-primary" href="/static/index_our_services">Our services</a>
+
   </div>
    </div>
 
