Modification de la homepage

--- a/app/views/static/index_home.html.erb
+++ b/app/views/static/index_home.html.erb
@@ -1,11 +1,87 @@
+<!-- Jumbotron -->
+
 <div>
     <div class="jumbotron text-center">
+        </br>
+        </br>
+        </br>
+        </br>
         <h2 class="text-primary titre1">Optimisez la satisfaction de vos clients en quelques clics</h2>
         <a style="padding: auto;" class="btn btn-primary" href="/static/index_our_services">Our services</a>
 
   </div>
    </div>
 
+
+<!-- Entreprises qui nous ont trust --> 
+
+<div>
+  <h1 class="text-warning text-center font-weight-bold mt-md" style="font-size: 80px;">They gave us their trust</h1>
+</div>
+
+
+<br><br><br><br><br><br><br><br><br><br>
+
+  <section class="section section-lg pt-lg-0 mt--200">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row row-grid">
+              <div class="col-lg-4">
+                <div class="card card-lift--hover shadow border-0">
+                  <div class="card-body py-5">
+                    <img src="https://media.licdn.com/dms/image/C4D03AQGUX-EIxsDnhQ/profile-displayphoto-shrink_800_800/0?e=1580947200&v=beta&t=QY48m4y36JN1Ay78KA22GEYRmLc3t_1NTW1ib1udokg" class="rounded mx-auto d-block img-fluid">            
+                    <h6 class="text-primary text-uppercase">Jean-Michel Consulting</h6>
+                    <p class="description mt-3 font-italic">"It's my direction, I broke the plombs, never gave up... Thanks to <b> Satis'faction</b> !" - Arthur Pillon</p>
+                    <div>
+                      <span class="badge badge-pill badge-primary">sexion</span>
+                      <span class="badge badge-pill badge-primary">assault</span>
+                      <span class="badge badge-pill badge-primary">pouloulou</span>
+                    </div>
+                    <a href="#" class="btn btn-primary mt-4">Visit website</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="card card-lift--hover shadow border-0">
+                  <div class="card-body py-5">
+                    <img src="https://scontent-cdg2-1.xx.fbcdn.net/v/t1.0-9/61828360_10214935214716073_7021585953395310592_n.jpg?_nc_cat=107&_nc_ohc=Vxwk_qOVFPUAQkUJJN7_LR7YGqEJ7XvZMVVoRyw60SZBPJHOUpuO6rEqw&_nc_ht=scontent-cdg2-1.xx&oh=08e1c7032cf0d7722f58131e622987fa&oe=5E7310D0"  class="rounded mx-auto d-block img-fluid">            
+                    <h6 class="text-danger text-uppercase">AMAZON</h6>
+                    <p class="description mt-3 font-italic">"Thanks to <b>Satis'faction </b> our customers stopped running away and now I can chill every day..." - Martin Dupont</p>
+                    <div>
+                      <span class="badge badge-pill badge-danger">accuracy</span>
+                      <span class="badge badge-pill badge-danger">vision</span>
+                      <span class="badge badge-pill badge-danger">success</span>
+                    </div>
+                    <a href="#" class="btn btn-danger mt-4">Visit website</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="card card-lift--hover shadow border-0">
+                  <div class="card-body py-5">
+                    <img src="https://media.licdn.com/dms/image/C4D03AQHbx04ZaS_RIg/profile-displayphoto-shrink_800_800/0?e=1580947200&v=beta&t=UQlF2G0opsGS9nt-khWXpO0bmXp08uMC66H13WVV9fM" class="rounded mx-auto d-block img-fluid">
+                    <h6 class="text-info text-uppercase">Nasa</h6>
+                    <p class="description mt-3 font-italic"> "<b>Satis'Faction</b> made us know how much states like our rockets. I recommend their solution!" - Augustin Fuzay</p>
+                    <div>
+                      <span class="badge badge-pill badge-info">quality</span>
+                      <span class="badge badge-pill badge-info">reliability</span>
+                      <span class="badge badge-pill badge-info">seriousness</span>
+                    </div>
+                    <a href="#" class="btn btn-info mt-4">Visit website</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+<!-- Why giving us your trust --> 
+
+<hr>
 <div>
   <h1 class="text-info text-center font-weight-bold mt-md" style="font-size: 80px;">Why giving us your trust?</h1>
 </div>
@@ -31,69 +107,4 @@
 
 
 
-<div>
-  <h1 class="text-warning text-center font-weight-bold mt-md" style="font-size: 80px;">They gave us their trust</h1>
-</div>
-
-
-<br><br><br><br><br><br><br><br><br><br>
-
-  <section class="section section-lg pt-lg-0 mt--200">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="row row-grid">
-              <div class="col-lg-4">
-                <div class="card card-lift--hover shadow border-0">
-                  <div class="card-body py-5">
-                    <div class="icon icon-shape icon-shape-primary rounded-circle mb-4">
-                    <i class="fas fa-microphone-slash"></i>                    </div>
-                    <h6 class="text-primary text-uppercase">Gims consulting</h6>
-                    <p class="description mt-3">It's my direction, I broke the plombs, never gave up...</p>
-                    <div>
-                      <span class="badge badge-pill badge-primary">sexion</span>
-                      <span class="badge badge-pill badge-primary">assault</span>
-                      <span class="badge badge-pill badge-primary">pouloulou</span>
-                    </div>
-                    <a href="#" class="btn btn-primary mt-4">Visit website</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="card card-lift--hover shadow border-0">
-                  <div class="card-body py-5">
-                    <div class="icon icon-shape icon-shape-danger rounded-circle mb-4">
-                    <i class="fas fa-place-of-worship"></i>                    </div>
-                    <h6 class="text-danger text-uppercase">Churches</h6>
-                    <p class="description mt-3">Thanks to SatisFaction our customers stopped running away.</p>
-                    <div>
-                      <span class="badge badge-pill badge-danger">accuracy</span>
-                      <span class="badge badge-pill badge-danger">vision</span>
-                      <span class="badge badge-pill badge-danger">success</span>
-                    </div>
-                    <a href="#" class="btn btn-danger mt-4">Visit website</a>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="card card-lift--hover shadow border-0">
-                  <div class="card-body py-5">
-                    <div class="icon icon-shape icon-shape-info rounded-circle mb-4">
-                    <i class="fas fa-space-shuttle"></i>
-                    </div>
-                    <h6 class="text-info text-uppercase">Nasa</h6>
-                    <p class="description mt-3">SatisFaction made us know how much states like our rockets.</p>
-                    <div>
-                      <span class="badge badge-pill badge-info">quality</span>
-                      <span class="badge badge-pill badge-info">reliability</span>
-                      <span class="badge badge-pill badge-info">seriousness</span>
-                    </div>
-                    <a href="#" class="btn btn-info mt-4">Visit website</a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+ 
