--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6577,10 +6577,9 @@ a.badge:focus
     margin-bottom: 2rem;
     padding: 2rem 1rem;
 
-    border-radius: .3rem;
     background-color: #169e1fa4;
-    height: 500px;
-    background-image: url("https://images.pexels.com/photos/590045/pexels-photo-590045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
+    height: 600px;
+    background-image: url("https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
 }
 
 @media (min-width: 576px)
