add front mail sign up

--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,10 +1,23 @@
+================================
+=Hello, <%= @user.username %> !=
+================================
 
-Welcome to <%= @user.username %> example.com, <%= @user.email %>
-===============================================
- 
-You have successfully signed up to example.com,
-your username is: <%= @user.email %>.
- 
-To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
+Your registration is validated, welcome to Satisfaction ! You can now create your forms and send it to all your customer, to improve your company.
+
+We strive to do the best for you and your company by these points :
+
+Expertise :
+
+Satisfaction has been created 6 years ago, and that's why we are the best in this field
+
+
+Efficiency :
+
+We offer solutions that are fast and easy to use for the user
+
+
+Profitability :
+
+With these results you will increase your profitability and your customers' opinion
+
+Go to Satisfaction : https://satisfaction-project.herokuapp.com/
