Ajout du notice

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,10 +1,12 @@
 
+</br> <%= notice %>
+
 <div class="container">
 	<div class="card-body p-lg-5" style="text-align: center;">
 		<h4 class="mb-1">You want to contact us?</h4>
 		<p class="mt-0">Your opinion is very important to us.</p>
 		<%= form_for @contact, url: contacts_path do |f| %>
-    <%= notice %>
+
 		<div class="form-group mt-5">
 			<div class="input-group input-group-alternative">
 				<div class="input-group-prepend">
