Ajout du model controller et views landings

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -81,7 +81,9 @@
 <% controller.redirect_to root_path %>
 <% end %>
 
+<!-- test pour rediriger vers la landing --> 
 
+<%= link_to 'Go to landing', landing_path(@landings), class: "btn btn-info" %>
 
 
 </section>
