--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,11 +1,22 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
+<section class="section section-shaped section-lg">
+    <div class="shape shape-style-1 bg-gradient-default">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
 <div class="container pt-lg-md">
   <div class="row justify-content-center">
     <div class="col-lg-5">
       <div class="card shadow border-0">
-        <div class="card-body px-lg-5 py-lg-5" style="background-color: #8898aa; border-radius: 15px;">
+        <div class="card-body px-lg-5 py-lg-5" style="background-color: #8898aa;">
           <div class="text-center text-muted mb-4">
             <h2>Password forget ?</h2>
           </div>
@@ -20,7 +31,7 @@
               </div>
             </div>
           	<div class="text-center">
-            	<%= f.submit "Send me reset password", :type=> "Button", :class=> "btn btn-secondary actions" %>
+            	<%= f.submit "Send me reset password", :class=> "btn btn-secondary actions" %>
           	</div>
           </form>
         </div>
@@ -28,6 +39,6 @@
     </div>
   </div>
 </div>
-
+</section>
 
 <% end %>
