Routes updated and show view updated

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -84,6 +84,9 @@
 <% controller.redirect_to root_path %>
 <% end %>
 
+<%= link_to 'Go to landing', landing_path(@landings), class: "btn btn-info" %>
+
+
 
 
 
