edit username to company name sign up

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,10 +24,10 @@
                   <div class="form-group">
                     <div class="input-group input-group-alternative">
                       <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fas fa-user-tag"></i></span>
+                        <span class="input-group-text"><i class="fas fa-globe-europe"></i></span>
                       </div>
                           <% f.label :username %>
-                          <%= f.text_field :username, autofocus: true, autocomplete: "username", :class=> "field form-control", :placeholder=> "Username" %>                                             
+                          <%= f.text_field :username, autofocus: true, autocomplete: "username", :class=> "field form-control", :placeholder=> "Company Name" %>                                             
                     </div>
                     <div class="text-primary font-italic"><small>(Between 3 and 16 characters)</small></div>
                   </div>
